# nodpi_rust

./: AGENTS.md  Cargo.toml  README.md  big-blacklist.txt  blacklist.txt
apps/server_rust/: Cargo.toml
apps/server_rust/src/: main.rs
apps/ui_android_kotlin/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
apps/ui_android_kotlin/app/: build.gradle.kts
apps/ui_android_kotlin/app/src/main/: AndroidManifest.xml
apps/ui_android_kotlin/app/src/main/assets/: blacklist.txt
apps/ui_android_kotlin/app/src/main/java/com/nodpi/android/: AssetInstaller.kt  BlacklistStore.kt  ConfigStore.kt  LogStore.kt  MainActivity.kt  PidStore.kt  ProxyConfig.kt  ServerManager.kt  ServerService.kt
apps/ui_android_kotlin/app/src/main/res/drawable/: ic_launcher.xml  status_badge.xml
apps/ui_android_kotlin/app/src/main/res/layout/: activity_main.xml
apps/ui_android_kotlin/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
config/: nodpi.conf
scripts/: android-build-server.sh
src/: main.rs
