[package]
name = "nodpi_server"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
tokio = { version = "1.36", features = ["full"] }
chrono = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0"
base64 = "0.22"
sha2 = "0.10"
